--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </nav>
       </div>
       <div class="block-right">
-        <form class="block-right__item block-right__item_search">
+        <form class="block-right__search">
           <input type="search">
           <img src="img/lypa.png">
         </form>
-        <a class="block-right__item block-right__item_sing" href="#">SING IN</a>
-        <a class="block-right__item block-right__item_cart" href="#">CART</a>
-        <img class="block-right__item block-right__item_img" src="img/Group 2.png">
-        <img class="block-right__item block-right__item_flag" src="img/flag.svg">
+        <a class="block-right__sing" href="#">SING IN</a>
+        <a class="block-right__cart" href="#">CART</a>
+        <img class="block-right__img" src="img/Group 2.png">
+        <img class="block-right__flag" src="img/flag.svg">
       </div>
     </header>
     <section class="one">
@@ -176,46 +176,46 @@ Photo:Yoon Sul.</p>
 <footer>
   <div class="footer__wrapper">
     <section class="footer-1">
-      <p class="footer__title">MY ACCOUNT</p>
-      <ul class="footer__menu">
-        <li><a class="footer__item" href="#">Login</a></li>
-        <li><a class="footer__item" href="#">Wish List</a></li>
-        <li><a class="footer__item" href="#">Order History</a></li>
-        <li><a class="footer__item" href="#">Track order</a></li>
-        <li><a class="footer__item" href="#">Gift cards</a></li>
+      <p class="footer__title footer__title_account">MY ACCOUNT</p>
+      <ul class="footer__menu footer__menu_account">
+        <li><a class="footer__item footer__item_login" href="#">Login</a></li>
+        <li><a class="footer__item footer__item_wishlist" href="#">Wish List</a></li>
+        <li><a class="footer__item footer__item_history" href="#">Order History</a></li>
+        <li><a class="footer__item footer__item_track" href="#">Track order</a></li>
+        <li><a class="footer__item footer__item_gift" href="#">Gift cards</a></li>
       </ul>
     </section>
     <section class="footer-2">
-      <p class="footer__title">CUSTOMER SERVICE</p>
-      <ul class="footer__menu">
-        <li><a class="footer__item" href="#">Contact us</a></li>
-        <li><a class="footer__item" href="#">Help/FAQ</a></li>
-        <li><a class="footer__item" href="#">Shipping</a></li>
-        <li><a class="footer__item" href="#">Returns</a></li>
-        <li><a class="footer__item" href="#">Size guide</a></li>
-        <li><a class="footer__item" href="#">Holiday shopping</a></li>
+      <p class="footer__title footer__title_service">CUSTOMER SERVICE</p>
+      <ul class="footer__menu footer__menu_service">
+        <li><a class="footer__item footer__item_contact" href="#">Contact us</a></li>
+        <li><a class="footer__item footer__item_help" href="#">Help/FAQ</a></li>
+        <li><a class="footer__item footer__item_shipping" href="#">Shipping</a></li>
+        <li><a class="footer__item footer__item_returns" href="#">Returns</a></li>
+        <li><a class="footer__item footer__item_size" href="#">Size guide</a></li>
+        <li><a class="footer__item footer__item_shopping" href="#">Holiday shopping</a></li>
       </ul>
     </section>
     <section class="footer-3">
-      <p class="footer__title">MISCELLANEOUS</p>
-      <ul class="footer__menu">
-        <li><a class="footer__item" href="#">About Us</a></li>
-        <li><a class="footer__item" href="#">Careers</a></li>
-        <li><a class="footer__item" href="#">Privacy Policy</a></li>
-        <li><a class="footer__item" href="#">Terms & Conditions</a></li>
-        <li><a class="footer__item" href="#">Ethical Policy</a></li>
-        <li><a class="footer__item" href="#">Homepage US/UK</a></li>
+      <p class="footer__title footer__title_miscel">MISCELLANEOUS</p>
+      <ul class="footer__menu footer__menu_miscel">
+        <li><a class="footer__item footer__item_about" href="#">About Us</a></li>
+        <li><a class="footer__item footer__item_careers" href="#">Careers</a></li>
+        <li><a class="footer__item footer__item_privacy" href="#">Privacy Policy</a></li>
+        <li><a class="footer__item footer__item_terms" href="#">Terms & Conditions</a></li>
+        <li><a class="footer__item footer__item_ethical" href="#">Ethical Policy</a></li>
+        <li><a class="footer__item footer__item_home" href="#">Homepage US/UK</a></li>
       </ul>
     </section>
     <section class="footer-4">
-      <p class="footer__title">NEWSLETTER SIGN UP</p>
+      <p class="footer__title footer__title_sing">NEWSLETTER SIGN UP</p>
       <p class="footer__subtitle">Get 10% Off Your Next Order!</p>
       <button class="footer__button">SIGN UP</button>
       <nav class="social-icons">
-        <a class="social__item" href="https://www.facebook.com"><img src="img/facebook.png"></a>
-        <a class="social__item" href="https://www.twitter.com"><img src="img/twitter.png"></a>
-        <a class="social__item" href="https://www.instagram.com/"><img src="img/instagram.png"></a>
-        <a class="social__item" href="https://www.pinterest.ru/"><img src="img/pinterest.png"></a>
+        <a class="social__item social__item_fb" href="https://www.facebook.com"><img src="img/facebook.png"></a>
+        <a class="social__item social__item_tw" href="https://www.twitter.com"><img src="img/twitter.png"></a>
+        <a class="social__item social__item_ig" href="https://www.instagram.com/"><img src="img/instagram.png"></a>
+        <a class="social__itemsocial__item_pt" href="https://www.pinterest.ru/"><img src="img/pinterest.png"></a>
       </nav>
     </section>
   </div>
