--- a/index.html
+++ b/index.html
@@ -42,68 +42,68 @@
         </div>
       </div>
     </section>
-    <section class="products">
+    <section class="product">
       <h2 class="product__title">FEATURED PRODUCT</h2>
-      <section class="blocks">
-        <section class="block">
-          <img class="kros" src="img/kros-1.svg">
-          <p class="name">Atlas Black/Rasta Axion</p>
-          <div class="ch">
-            <p class="price">$89.00</p>
-            <nav class="change">
-              <button class="change__item change__item_11"></button>
-              <button class="change__item change__item_12"></button>
-              <button class="change__item change__item_13"></button>
-              <button class="change__item change__item_14"></button>
+      <section class="product-assortment">
+        <section class="product-card">
+          <img class="product-card__img" src="img/kros-1.svg">
+          <p class="product-card__name">Atlas Black/Rasta Axion</p>
+          <div class="wrapper__choice">
+            <p class="product-card__price">$89.00</p>
+            <nav class="choice">
+              <button class="choice__item choice__item_gray"></button>
+              <button class="choice__item choice__item_black"></button>
+              <button class="choice__item choice__item_red"></button>
+              <button class="choice__item choice__item_yellow"></button>
             </nav>
           </div>
         </section>
-        <div class="vl"></div>
-        <section class="block">
-          <img class="kros" src="img/kros-2.svg">
-          <p class="name">Camel/Chili Pepper Axion</p>
-          <div class="ch">
-            <p class="price">$74.00</p>
-            <nav class="change">
-              <button class="change__item change__item_21"></button>
-              <button class="change__item change__item_22"></button>
-              <button class="change__item change__item_23"></button>
-              <button class="change__item change__item_24"></button>
+        <div class="product-assortment__vl"></div>
+        <section class="product-card">
+          <img class="product-card__img" src="img/kros-2.svg">
+          <p class="product-card__name">Camel/Chili Pepper Axion</p>
+          <div class="wrapper__choice">
+            <p class="product-card__price">$74.00</p>
+            <nav class="choice">
+              <button class="choice__item choice__item_gray"></button>
+              <button class="choice__item choice__item_orange"></button>
+              <button class="choice__item choice__item_red"></button>
+              <button class="choice__item choice__item_yellow"></button>
             </nav>
           </div>
         </section>
-        <div class="vl"></div>
-        <section class="block">
-          <img class="kros" src="img/kros-3.svg">
-          <p class="name">Mandel Smoke/Rust Axion </p>
-          <div class="ch">
-            <p class="price">$69.00</p>
-            <nav class="change">
-              <button class="change__item change__item_31"></button>
-              <button class="change__item change__item_32"></button>
-              <button class="change__item change__item_33"></button>
-              <button class="change__item change__item_34"></button>
+        <div class="product-assortment__vl"></div>
+        <section class="product-card">
+          <img class="product-card__img" src="img/kros-3.svg">
+          <p class="product-card__name">Mandel Smoke/Rust Axion </p>
+          <div class="wrapper__choice">
+            <p class="product-card__price">$69.00</p>
+            <nav class="choice">
+              <button class="choice__item choice__item_gray"></button>
+              <button class="choice__item choice__item_brown"></button>
+              <button class="choice__item choice__item_navy"></button>
+              <button class="choice__item choice__item_yellow"></button>
             </nav>
           </div>
         </section>
-        <div class="vl"></div>
-        <section class="block">
-          <img class="kros" src="img/kros-4.svg">
-          <p class="name">Cloud/Electric Blue Axion </p>
-          <div class="ch">
-            <p class="price">$69.00</p>
-            <nav class="change">
-              <button class="change__item change__item_41"></button>
-              <button class="change__item change__item_42"></button>
-              <button class="change__item change__item_43"></button>
-              <button class="change__item change__item_44"></button>
+        <div class="product-assortment__vl"></div>
+        <section class="product-card">
+          <img class="product-card__img" src="img/kros-4.svg">
+          <p class="product-card__name">Cloud/Electric Blue Axion </p>
+          <div class="wrapper__choice">
+            <p class="product-card__price">$69.00</p>
+            <nav class="choice">
+              <button class="choice__item choice__item_gray"></button>
+              <button class="choice__item choice__item_blue"></button>
+              <button class="choice__item choice__item_red"></button>
+              <button class="choice__item choice__item_yellow"></button>
             </nav>
           </div>
         </section>
       </section>
     </section>
     <section class="tree">
-      <img class="video"  src="img/video.png">
+      <img class="tree__video"  src="img/video.png">
       <div class="tree-text">
         <h3 class="tree-text__title">LEGENDARY FOOTWEAR REBORN</h3>
         <p class="tree-text__subtitle">We are a brand with a history and are relaunching for 2019. We’ve been a part of the skater’s family ever since it’s early teenage years. And now we presentate a new footwear collection.</p>
@@ -121,7 +121,7 @@
         <img class="stories__img" src="img/history-1.png">
         <p class="stories__subtitle">Presents Justin Anagoa</p>
         <p class="stories__text">Anagoa’s been a part of the skater’s family ever since his early teenage years. He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa lives his day-to-day, to see what makes Anagoa tick.</p>
-        <div class="ch">
+        <div class="wrapper__choice">
           <div class="button">
             <a class="stories__button" href="#">LEARN MORE</a>
             <div class="arrow arrow__1">
@@ -136,7 +136,7 @@
         <p class="stories__subtitle">First Frontside flip</p>
         <p class="stories__text">Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day.
 Photo:Yoon Sul.</p>
-        <div class="ch">
+        <div class="wrapper__choice">
           <div class="button">
             <a class="stories__button" href="#">LEARN MORE</a>
             <div class="arrow arrow__1">
@@ -150,7 +150,7 @@ Photo:Yoon Sul.</p>
         <img class="stories__img" src="img/history-3.png">
         <p class="stories__subtitle">Kevin Baekkel is Pro</p>
         <p class="stories__text">Creature proudly announced today that they’re officially adding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years Thrasher King of the Road, and constantly lighting every spot he hits on fire.</p>
-        <div class="ch">
+        <div class="wrapper__choice">
           <div class="button">
             <a class="stories__button" href="#">LEARN MORE</a>
             <div class="arrow arrow__1">
@@ -215,7 +215,7 @@ Photo:Yoon Sul.</p>
         <a class="social__item social__item_fb" href="https://www.facebook.com"><img src="img/facebook.png"></a>
         <a class="social__item social__item_tw" href="https://www.twitter.com"><img src="img/twitter.png"></a>
         <a class="social__item social__item_ig" href="https://www.instagram.com/"><img src="img/instagram.png"></a>
-        <a class="social__itemsocial__item_pt" href="https://www.pinterest.ru/"><img src="img/pinterest.png"></a>
+        <a class="social__item social__item_pt" href="https://www.pinterest.ru/"><img src="img/pinterest.png"></a>
       </nav>
     </section>
   </div>
