--- a/index.html
+++ b/index.html
@@ -178,33 +178,33 @@ Photo:Yoon Sul.</p>
     <div class="footer-account">
       <p class="footer-account__title">MY ACCOUNT</p>
       <ul class="menu-account">
-        <li><a class="menu-account__item menu-account__item_login" href="#">Login</a></li>
-        <li><a class="menu-account__item menu-account__item_wishlist" href="#">Wish List</a></li>
-        <li><a class="menu-account__item menu-account__item_history" href="#">Order History</a></li>
-        <li><a class="menu-account__item menu-account__item_track" href="#">Track order</a></li>
-        <li><a class="menu-account__item menu-account__item_gift" href="#">Gift cards</a></li>
+        <li><a class="menu-account__item" href="#">Login</a></li>
+        <li><a class="menu-account__item" href="#">Wish List</a></li>
+        <li><a class="menu-account__item" href="#">Order History</a></li>
+        <li><a class="menu-account__item" href="#">Track order</a></li>
+        <li><a class="menu-account__item" href="#">Gift cards</a></li>
       </ul>
     </div>
     <div class="footer-service">
       <p class="footer-service__title">CUSTOMER SERVICE</p>
       <ul class="menu-service">
-        <li><a class="menu-service__item menu-service__item_contact" href="#">Contact us</a></li>
-        <li><a class="menu-service__item menu-service__item_help" href="#">Help/FAQ</a></li>
-        <li><a class="menu-service__item menu-service__item_shipping" href="#">Shipping</a></li>
-        <li><a class="menu-service__item menu-service__item_returns" href="#">Returns</a></li>
-        <li><a class="menu-service__item menu-service__item_size" href="#">Size guide</a></li>
-        <li><a class="menu-service__item menu-service__item_shopping" href="#">Holiday shopping</a></li>
+        <li><a class="menu-service__item" href="#">Contact us</a></li>
+        <li><a class="menu-service__item" href="#">Help/FAQ</a></li>
+        <li><a class="menu-service__item" href="#">Shipping</a></li>
+        <li><a class="menu-service__item" href="#">Returns</a></li>
+        <li><a class="menu-service__item" href="#">Size guide</a></li>
+        <li><a class="menu-service__item" href="#">Holiday shopping</a></li>
       </ul>
     </div>
     <div class="footer-miscel">
       <p class="footer-miscel__title">MISCELLANEOUS</p>
       <ul class="menu-miscel">
-        <li><a class="menu-miscel__item menu-miscel__item_about" href="#">About Us</a></li>
-        <li><a class="menu-miscel__item menu-miscel__item_careers" href="#">Careers</a></li>
-        <li><a class="menu-miscel__item menu-miscel__item_privacy" href="#">Privacy Policy</a></li>
-        <li><a class="menu-miscel__item menu-miscel__item_terms" href="#">Terms & Conditions</a></li>
-        <li><a class="menu-miscel__item menu-miscel__item_ethical" href="#">Ethical Policy</a></li>
-        <li><a class="menu-miscel__item menu-miscel__item_home" href="#">Homepage US/UK</a></li>
+        <li><a class="menu-miscel__item" href="#">About Us</a></li>
+        <li><a class="menu-miscel__item" href="#">Careers</a></li>
+        <li><a class="menu-miscel__item" href="#">Privacy Policy</a></li>
+        <li><a class="menu-miscel__item" href="#">Terms & Conditions</a></li>
+        <li><a class="menu-miscel__item" href="#">Ethical Policy</a></li>
+        <li><a class="menu-miscel__item" href="#">Homepage US/UK</a></li>
       </ul>
     </div>
     <div class="footer-sing">
@@ -212,10 +212,10 @@ Photo:Yoon Sul.</p>
       <p class="footer-sing__subtitle">Get 10% Off Your Next Order!</p>
       <button class="footer-sing__button">SIGN UP</button>
       <nav class="social-icons">
-        <a class="social__item social__item_fb" href="https://www.facebook.com"><img src="img/facebook.png"></a>
-        <a class="social__item social__item_tw" href="https://www.twitter.com"><img src="img/twitter.png"></a>
-        <a class="social__item social__item_ig" href="https://www.instagram.com/"><img src="img/instagram.png"></a>
-        <a class="social__item social__item_pt" href="https://www.pinterest.ru/"><img src="img/pinterest.png"></a>
+        <a class="social-icons__item" href="https://www.facebook.com"><img src="img/facebook.png"></a>
+        <a class="social-icons__item" href="https://www.twitter.com"><img src="img/twitter.png"></a>
+        <a class="social-icons__item" href="https://www.instagram.com/"><img src="img/instagram.png"></a>
+        <a class="social-icons__item" href="https://www.pinterest.ru/"><img src="img/pinterest.png"></a>
       </nav>
     </div>
   </div>
