--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <input type="search">
           <img src="img/lypa.png">
         </form>
-        <a class="block-right__sing" href="#">SING IN</a>
+        <a class="block-right__sing" href="#">SIGN IN</a>
         <a class="block-right__cart" href="#">CART</a>
         <img class="block-right__img" src="img/Group 2.png">
         <img class="block-right__flag" src="img/flag.svg">
@@ -47,8 +47,8 @@
       <section class="product-assortment">
         <section class="product-card">
           <img class="product-card__img" src="img/kros-1.svg">
-          <p class="product-card__name">Atlas Black/Rasta Axion</p>
-          <div class="wrapper__choice">
+          <p class="product-card__name product-card__name_1">Atlas Black/Rasta Axion</p>
+          <div class="wrapper__choice wrapper__choice_1">
             <p class="product-card__price">$89.00</p>
             <nav class="choice">
               <button class="choice__item choice__item_gray"></button>
@@ -61,8 +61,8 @@
         <div class="product-assortment__vl"></div>
         <section class="product-card">
           <img class="product-card__img" src="img/kros-2.svg">
-          <p class="product-card__name">Camel/Chili Pepper Axion</p>
-          <div class="wrapper__choice">
+          <p class="product-card__name product-card__name_2">Camel/Chili Pepper Axion</p>
+          <div class="wrapper__choice wrapper__choice_2">
             <p class="product-card__price">$74.00</p>
             <nav class="choice">
               <button class="choice__item choice__item_gray"></button>
@@ -75,8 +75,8 @@
         <div class="product-assortment__vl"></div>
         <section class="product-card">
           <img class="product-card__img" src="img/kros-3.svg">
-          <p class="product-card__name">Mandel Smoke/Rust Axion </p>
-          <div class="wrapper__choice">
+          <p class="product-card__name product-card__name_3">Mandel Smoke/Rust Axion </p>
+          <div class="wrapper__choice wrapper__choice_3">
             <p class="product-card__price">$69.00</p>
             <nav class="choice">
               <button class="choice__item choice__item_gray"></button>
@@ -89,8 +89,8 @@
         <div class="product-assortment__vl"></div>
         <section class="product-card">
           <img class="product-card__img" src="img/kros-4.svg">
-          <p class="product-card__name">Cloud/Electric Blue Axion </p>
-          <div class="wrapper__choice">
+          <p class="product-card__name product-card__name_4">Cloud/Electric Blue Axion </p>
+          <div class="wrapper__choice wrapper__choice_4">
             <p class="product-card__price">$69.00</p>
             <nav class="choice">
               <button class="choice__item choice__item_gray"></button>
