--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </nav>
           </div>
         </section>
-        <div class="product-assortment__vl"></div>
+        <div class="c"></div>
         <section class="product-card">
           <div class="product-card__img-3"></div>
           <p class="product-card__name product-card__name_3">Mandel Smoke/Rust Axion </p>
