--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="block-left">
-        <div class="logo">
-          <img src="img/Axion_logo.svg">
-        </div>
-        <nav class="menu">
-          <a class="menu__item" href="#">SHOP</a>
-          <a class="menu__item" href="#">NEWS</a>
-          <a class="menu__item" href="#">TEAM</a>
-          <a class="menu__item" href="#">LEGACY</a>
-          <a class="menu__item" href="#">HELP</a>
-        </nav>
+      <div class="logo">
+        <img class="logo-img_one" src="img/Axion_logo.svg">
       </div>
-      <div class="block-right">
-        <form class="block-right__search">
-          <input type="search">
-          <img src="img/lypa.png">
-        </form>
-        <a class="block-right__sing" href="#">SIGN IN</a>
-        <a class="block-right__cart" href="#">CART</a>
-        <img class="block-right__img" src="img/Group 2.png">
-        <img class="block-right__flag" src="img/flag.svg">
+      <div class="hamburger-menu">
+        <input id="menu__toggle" type="checkbox">
+        <label class="menu__btn" for="menu__toggle">
+          <span></span>
+        </label>
+        <nav class="menu">
+          <a class="menu__item menu__item_shop" href="#">SHOP</a>
+          <a class="menu__item menu__item_news" href="#">NEWS</a>
+          <a class="menu__item menu__item_team" href="#">TEAM</a>
+          <a class="menu__item menu__item_legacy" href="#">LEGACY</a>
+          <a class="menu__item menu__item_help" href="#">HELP</a>
+          <form class="menu__item menu__item_search">
+            <input type="search">
+            <img src="img/lypa.png">
+          </form>
+          <a class="menu__item menu__item_sing" href="#">SIGN IN</a>
+          <a class="menu__item menu__item_cart" href="#">CART</a>
+          <img class="menu__item menu__item_img" src="img/Group 2.png">
+          <img class="menu__item menu__item_flag" src="img/flag.svg">
+        </nav>
       </div>
     </header>
     <section class="one">
