--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <a class="menu__item menu__item_legacy" href="#">LEGACY</a>
           <a class="menu__item menu__item_help" href="#">HELP</a>
           <form class="menu__item menu__item_search">
-            <input type="search">
-            <img src="img/lypa.png">
+            <input type="search" class="menu__item_search-1">
+            <img class="menu__item_lypa" src="img/lypa.png">
           </form>
           <a class="menu__item menu__item_sing" href="#">SIGN IN</a>
           <a class="menu__item menu__item_cart" href="#">CART</a>
