--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="logo">
-        <img class="logo-img_one" src="img/Axion_logo.svg">
-      </div>
+      <div class="logo"></div>
       <div class="hamburger-menu">
         <input id="menu__toggle" type="checkbox">
         <label class="menu__btn" for="menu__toggle">
