--- a/index.html
+++ b/index.html
@@ -17,23 +17,19 @@
           <span></span>
         </label>
         <nav class="menu">
-          <div class="menu-left">
-            <a class="menu-left__item menu-left__item_shop" href="#">SHOP</a>
-            <a class="menu-left__item menu-left__item_news" href="#">NEWS</a>
-            <a class="menu-left__item menu-left__item_team" href="#">TEAM</a>
-            <a class="menu-left__item menu-left__item_legacy" href="#">LEGACY</a>
-            <a class="menu-left__item menu-left__item_help" href="#">HELP</a>
-          </div>
-          <div class="menu-right">
-            <form class="menu-right__item menu-right__item_search">
-              <input type="search" class="menu-right__item_search-1">
-              <img class="menu-right__item_lypa" src="img/lypa.png">
-            </form>
-            <a class="menu-right__item menu-right__item_sing" href="#">SIGN IN</a>
-            <a class="menu-right__item menu-right__item_cart" href="#">CART</a>
-            <img class="menu-right__item menu-right__item_img" src="img/Group 2.png">
-            <img class="menu-right__item menu-right__item_flag" src="img/flag.svg">
-          </div>
+          <a class="menu__item menu__item_shop" href="#">SHOP</a>
+          <a class="menu__item menu__item_news" href="#">NEWS</a>
+          <a class="menu__item menu__item_team" href="#">TEAM</a>
+          <a class="menu__item menu__item_legacy" href="#">LEGACY</a>
+          <a class="menu__item menu__item_help" href="#">HELP</a>
+          <form class="menu__item menu__item_search">
+            <input type="search" class="menu__item_search-1">
+            <img class="menu__item_lypa" src="img/lypa.png">
+          </form>
+          <a class="menu__item menu__item_sing" href="#">SIGN IN</a>
+          <a class="menu__item menu__item_cart" href="#">CART</a>
+          <img class="menu__item menu__item_img" src="img/Group 2.png">
+          <img class="menu__item menu__item_flag" src="img/flag.svg">
         </nav>
       </div>
     </header>
