--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
       </section>
     </section>
     <section class="tree">
-      <img class="tree__video"  src="img/video.png">
+      <div class="tree-box">
+        <img class="tree-box__video"  src="img/video.png">
+        <button class="tree-box__button">
+          <img class="tree-box__button-img" src="img/стрелка.png">
+        </button>
+      </div>
       <div class="tree-text">
         <h3 class="tree-text__title">LEGENDARY FOOTWEAR REBORN</h3>
         <p class="tree-text__subtitle">We are a brand with a history and are relaunching for 2019. We’ve been a part of the skater’s family ever since it’s early teenage years. And now we presentate a new footwear collection.</p>
