--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="tree-text">
         <h3 class="tree-text__title">LEGENDARY FOOTWEAR REBORN</h3>
         <p class="tree-text__subtitle">We are a brand with a history and are relaunching for 2019. We’ve been a part of the skater’s family ever since it’s early teenage years. And now we presentate a new footwear collection.</p>
-        <div class="button">
+        <div class="button button__tree">
           <a class="tree-text__button" href="#">LEARN MORE</a>
           <div class="arrow">
             <div></div>
