--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <section class="stories">
         <div class="stories__img-2"></div>
         <p class="stories__subtitle">First Frontside flip</p>
-        <p class="stories__text">Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day.
+        <p class="stories__text">Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day.<br />
 Photo:Yoon Sul.</p>
         <div class="wrapper__choice">
           <div class="button">
