--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
     <h4 class="stories__title">Recent stories</h4>
     <div class="srories-wrapper">
-      <section class="stories">
+      <section class="stories stories__1">
         <div class="stories__img-1"></div>
         <p class="stories__subtitle">Presents Justin Anagoa</p>
         <p class="stories__text">Anagoa’s been a part of the skater’s family ever since his early teenage years. He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa lives his day-to-day, to see what makes Anagoa tick.</p>
@@ -136,7 +136,7 @@
           <p class="stories__data">11.08.2018</p>
         </div>
       </section>
-      <section class="stories">
+      <section class="stories stories__2">
         <div class="stories__img-2"></div>
         <p class="stories__subtitle">First Frontside flip</p>
         <p class="stories__text">Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day.<br />
@@ -151,7 +151,7 @@ Photo:Yoon Sul.</p>
           <p class="stories__data">17.08.2018</p>
         </div>
       </section>
-      <section class="stories">
+      <section class="stories stories__3">
         <div class="stories__img-3"></div>
         <p class="stories__subtitle">Kevin Baekkel is Pro</p>
         <p class="stories__text">Creature proudly announced today that they’re officially adding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years Thrasher King of the Road, and constantly lighting every spot he hits on fire.</p>
