--- a/index.html
+++ b/index.html
@@ -102,80 +102,81 @@
         </section>
       </section>
     </section>
-    <section class="tree">
-      <div class="tree-box">
-        <img class="tree-box__video"  src="img/video.png">
-        <button class="tree-box__button">
-          <img class="tree-box__button-img" src="img/стрелка.png">
-        </button>
-      </div>
-      <div class="tree-text">
-        <h3 class="tree-text__title">LEGENDARY FOOTWEAR REBORN</h3>
-        <p class="tree-text__subtitle">We are a brand with a history and are relaunching for 2019. We’ve been a part of the skater’s family ever since it’s early teenage years. And now we presentate a new footwear collection.</p>
-        <div class="button button__tree">
-          <a class="tree-text__button" href="#">LEARN MORE</a>
-          <div class="arrow">
-            <div></div>
-          </div>
+    <div class="wrapper__black-fon">
+      <section class="tree">
+        <div class="tree-box">
+          <img class="tree-box__video"  src="img/video.png">
+          <button class="tree-box__button">
+            <img class="tree-box__button-img" src="img/стрелка.png">
+          </button>
         </div>
-      </div>
-    </section>
-    <h4 class="stories__title">Recent stories</h4>
-    <div class="srories-wrapper">
-      <section class="stories stories__1">
-        <div class="stories__img-1"></div>
-        <p class="stories__subtitle">Presents Justin Anagoa</p>
-        <p class="stories__text">Anagoa’s been a part of the skater’s family ever since his early teenage years. He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa lives his day-to-day, to see what makes Anagoa tick.</p>
-        <div class="wrapper__choice">
-          <div class="button">
-            <a class="stories__button" href="#">LEARN MORE</a>
-            <div class="arrow arrow__1">
+        <div class="tree-text">
+          <h3 class="tree-text__title">LEGENDARY FOOTWEAR REBORN</h3>
+          <p class="tree-text__subtitle">We are a brand with a history and are relaunching for 2019. We’ve been a part of the skater’s family ever since it’s early teenage years. And now we presentate a new footwear collection.</p>
+          <div class="button button__tree">
+            <a class="tree-text__button" href="#">LEARN MORE</a>
+            <div class="arrow">
               <div></div>
             </div>
           </div>
-          <p class="stories__data">11.08.2018</p>
         </div>
       </section>
-      <section class="stories stories__2">
-        <div class="stories__img-2"></div>
-        <p class="stories__subtitle">First Frontside flip</p>
-        <p class="stories__text">Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day.<br />
+      <h4 class="stories__title">Recent stories</h4>
+      <div class="srories-wrapper">
+        <section class="stories stories__1">
+          <div class="stories__img-1"></div>
+          <p class="stories__subtitle">Presents Justin Anagoa</p>
+          <p class="stories__text">Anagoa’s been a part of the skater’s family ever since his early teenage years. He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa lives his day-to-day, to see what makes Anagoa tick.</p>
+          <div class="wrapper__choice">
+            <div class="button">
+              <a class="stories__button" href="#">LEARN MORE</a>
+              <div class="arrow arrow__1">
+                <div></div>
+              </div>
+            </div>
+            <p class="stories__data">11.08.2018</p>
+          </div>
+        </section>
+        <section class="stories stories__2">
+          <div class="stories__img-2"></div>
+          <p class="stories__subtitle">First Frontside flip</p>
+          <p class="stories__text">Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day.<br />
 Photo:Yoon Sul.</p>
-        <div class="wrapper__choice">
-          <div class="button">
-            <a class="stories__button" href="#">LEARN MORE</a>
-            <div class="arrow arrow__1">
-              <div></div>
+          <div class="wrapper__choice">
+            <div class="button">
+              <a class="stories__button" href="#">LEARN MORE</a>
+              <div class="arrow arrow__1">
+                <div></div>
+              </div>
             </div>
+            <p class="stories__data">17.08.2018</p>
           </div>
-          <p class="stories__data">17.08.2018</p>
-        </div>
-      </section>
-      <section class="stories stories__3">
-        <div class="stories__img-3"></div>
-        <p class="stories__subtitle">Kevin Baekkel is Pro</p>
-        <p class="stories__text">Creature proudly announced today that they’re officially adding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years Thrasher King of the Road, and constantly lighting every spot he hits on fire.</p>
-        <div class="wrapper__choice">
-          <div class="button">
-            <a class="stories__button" href="#">LEARN MORE</a>
-            <div class="arrow arrow__1">
-              <div></div>
+        </section>
+        <section class="stories stories__3">
+          <div class="stories__img-3"></div>
+          <p class="stories__subtitle">Kevin Baekkel is Pro</p>
+          <p class="stories__text">Creature proudly announced today that they’re officially adding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years Thrasher King of the Road, and constantly lighting every spot he hits on fire.</p>
+          <div class="wrapper__choice">
+            <div class="button">
+              <a class="stories__button" href="#">LEARN MORE</a>
+              <div class="arrow arrow__1">
+                <div></div>
+              </div>
             </div>
+            <p class="stories__data">29.07.2018</p>
           </div>
-          <p class="stories__data">29.07.2018</p>
-        </div>
-      </section>
-    </div>
-    <figure>
-      <figcaption>#AXIONFOOTWEAR</figcaption>
-      <img class="gallery" src="img/foto-1.png">
-      <img class="gallery" src="img/foto-2.png">
-      <img class="gallery" src="img/foto-3.png">
-      <img class="gallery" src="img/foto-4.png">
-      <img class="gallery" src="img/foto-5.png">
-      <img class="gallery" src="img/foto-6.png">
-      <img class="gallery" src="img/foto-7.png">
-    </figure>
+        </section>
+      </div>
+      <figure>
+        <figcaption>#AXIONFOOTWEAR</figcaption>
+        <img class="gallery" src="img/foto-1.png">
+        <img class="gallery" src="img/foto-2.png">
+        <img class="gallery" src="img/foto-3.png">
+        <img class="gallery" src="img/foto-4.png">
+        <img class="gallery" src="img/foto-5.png">
+        <img class="gallery" src="img/foto-6.png">
+        <img class="gallery" src="img/foto-7.png">
+      </figure>
   </div>
 </body>
 <footer>
