--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="stories__img-1"></div>
           <p class="stories__subtitle">Presents Justin Anagoa</p>
           <p class="stories__text">Anagoa’s been a part of the skater’s family ever since his early teenage years. He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa lives his day-to-day, to see what makes Anagoa tick.</p>
-          <div class="wrapper__choice">
+          <div class="wrapper__choice wrapper__choice_one">
             <div class="button">
               <a class="stories__button" href="#">LEARN MORE</a>
               <div class="arrow arrow__1">
@@ -142,7 +142,7 @@
           <p class="stories__subtitle">First Frontside flip</p>
           <p class="stories__text">Yoon recently discusses his first time shooting a signature Andrew Reynolds frontside flip on The Berrics. Click the image below to see the full gallery and read up on what happened that day.<br />
 Photo:Yoon Sul.</p>
-          <div class="wrapper__choice">
+          <div class="wrapper__choice wrapper__choice_two">
             <div class="button">
               <a class="stories__button" href="#">LEARN MORE</a>
               <div class="arrow arrow__1">
@@ -156,7 +156,7 @@ Photo:Yoon Sul.</p>
           <div class="stories__img-3"></div>
           <p class="stories__subtitle">Kevin Baekkel is Pro</p>
           <p class="stories__text">Creature proudly announced today that they’re officially adding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years Thrasher King of the Road, and constantly lighting every spot he hits on fire.</p>
-          <div class="wrapper__choice">
+          <div class="wrapper__choice wrapper__choice_str">
             <div class="button">
               <a class="stories__button" href="#">LEARN MORE</a>
               <div class="arrow arrow__1">
@@ -169,13 +169,16 @@ Photo:Yoon Sul.</p>
       </div>
       <figure>
         <figcaption>#AXIONFOOTWEAR</figcaption>
-        <img class="gallery" src="img/foto-1.png">
-        <img class="gallery" src="img/foto-2.png">
-        <img class="gallery" src="img/foto-3.png">
-        <img class="gallery" src="img/foto-4.png">
-        <img class="gallery" src="img/foto-5.png">
-        <img class="gallery" src="img/foto-6.png">
-        <img class="gallery" src="img/foto-7.png">
+        <div class="wrapper-gallery">
+          <img class="gallery gallery__one" src="img/foto-1.png">
+          <img class="gallery gallery__two" src="img/foto-2.png">
+          <img class="gallery gallery__three" src="img/foto-3.png">
+          <img class="gallery gallery__four" src="img/foto-4.png">
+          <img class="gallery gallery__five" src="img/foto-5.png">
+          <img class="gallery gallery__six" src="img/foto-6.png">
+          <img class="gallery gallery__seven" src="img/foto-7.png">
+          <img class="gallery gallery__eight" src="img/foto-1.png">
+        </div>
       </figure>
   </div>
 </body>
