--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Photo:Yoon Sul.</p>
     </div>
     <div class="footer-sing">
       <p class="footer-sing__title">NEWSLETTER SIGN UP</p>
-      <p class="footer-sing__subtitle">Get 10% Off Your Next Order!</p>
+      <div class="footer-sing__wrap"><p class="footer-sing__subtitle">Get 10% Off Your Next Order!</p></div>
       <button class="footer-sing__button">SIGN UP</button>
       <nav class="social-icons">
         <a class="social-icons__item" href="https://www.facebook.com"><img src="img/facebook.png"></a>
