--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@ Photo:Yoon Sul.</p>
       </div>
       <button class="footer-sing__button">SIGN UP</button>
       <nav class="social-icons">
-        <a class="social-icons__item" href="https://www.facebook.com"><img src="img/facebook.png"></a>
-        <a class="social-icons__item" href="https://www.twitter.com"><img src="img/twitter.png"></a>
-        <a class="social-icons__item" href="https://www.instagram.com/"><img src="img/instagram.png"></a>
-        <a class="social-icons__item" href="https://www.pinterest.ru/"><img src="img/pinterest.png"></a>
+        <a class="social-icons__item_fb" href="https://www.facebook.com"><div class="social-icons__img-fb"></div></a>
+        <a class="social-icons__item_tw" href="https://www.twitter.com"><div class="social-icons__img-tw"></div></a>
+        <a class="social-icons__item_ig" href="https://www.instagram.com/"><div class="social-icons__img-ig"></div></a>
+        <a class="social-icons__item_pt" href="https://www.pinterest.ru/"><div class="social-icons__img-pt"></div></a>
       </nav>
     </div>
   </div>
