--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ Photo:Yoon Sul.</p>
           <img class="gallery gallery__eight" src="img/foto-1.png">
         </div>
       </figure>
+    </div>
   </div>
 </body>
 <footer>
